--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -5,7 +5,7 @@
     "start_url": "./index.html",
     "display": "standalone",
     "background_color": "#ffffff",
-    "theme_color": "#4285f4",
+    "theme_color": "#000000",
     "orientation": "portrait-primary",
     "scope": "./",
     "lang": "ko-KR",
