--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "모모의 일본어",
+    "name": "모모 일본어",
     "short_name": "모모 일본어",
     "description": "일본어 학습을 위한 종합 PWA 앱",
     "start_url": "./index.html",
     "display": "standalone",
     "background_color": "#000000",
-    "theme_color": "#000000",
+    "theme_color": "black",
     "orientation": "portrait-primary",
     "scope": "./",
     "lang": "ko-KR",
